ajustes en la vista de las publicaciones y creacion de la vista para una publicacion seleccionada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".Advertisement"
             android:exported="false" />
         <activity
+            android:name=".Advertisements"
+            android:exported="false" />
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
